--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
-*.env
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+VENV/
+.Python
+[Bb]in
+[Ii]nclude
+[Ll]ib
+[Ll]ib64
+[Ll]ocal
+[Ss]cripts
+pyvenv.cfg
+pip-selfcheck.json
+
+# Ignore Mac DS_Store files
+.DS_Store
+
+# Ignore vscode files
+.vscode
