--- a/Conda Environments/airflow_environment.yml
+++ b/Conda Environments/airflow_environment.yml
@@ -1,22 +1,176 @@
 name: airflow_env
 channels:
+  - anaconda
   - defaults
 dependencies:
-  - ca-certificates=2023.12.12=hca03da5_0
+  - ca-certificates=2023.08.22=hca03da5_0
   - libcxx=14.0.6=h848a8c0_0
   - libffi=3.4.4=hca03da5_0
+  - mysql-connector-c=6.1.11=h4a942e0_1
   - ncurses=6.4=h313beb8_0
-  - openssl=3.0.13=h1a28f6b_0
+  - openssl=1.1.1w=h1a28f6b_0
   - pip=23.3.1=py39hca03da5_0
-  - python=3.9.18=hb885b13_0
+  - python=3.9.18=hc0d8a6c_0
   - readline=8.2=h1a28f6b_0
   - setuptools=68.2.2=py39hca03da5_0
   - sqlite=3.41.2=h80987f9_0
   - tk=8.6.12=hb8d0fd4_0
-  - tzdata=2023d=h04d1e81_0
   - wheel=0.41.2=py39hca03da5_0
   - xz=5.4.5=h80987f9_0
   - zlib=1.2.13=h5a0b063_0
+  - pip:
+      - aiohttp==3.9.1
+      - aiosignal==1.3.1
+      - alembic==1.13.1
+      - amqp==5.2.0
+      - annotated-types==0.6.0
+      - anyio==4.2.0
+      - apache-airflow==2.8.1
+      - apache-airflow-providers-celery==3.5.1
+      - apache-airflow-providers-common-io==1.2.0
+      - apache-airflow-providers-common-sql==1.10.0
+      - apache-airflow-providers-ftp==3.7.0
+      - apache-airflow-providers-http==4.8.0
+      - apache-airflow-providers-imap==3.5.0
+      - apache-airflow-providers-sqlite==3.7.0
+      - apispec==6.4.0
+      - argcomplete==3.2.1
+      - asgiref==3.7.2
+      - async-timeout==4.0.3
+      - attrs==23.2.0
+      - babel==2.14.0
+      - backoff==2.2.1
+      - billiard==4.2.0
+      - blinker==1.7.0
+      - cachelib==0.9.0
+      - celery==5.3.6
+      - certifi==2023.11.17
+      - cffi==1.16.0
+      - charset-normalizer==3.3.2
+      - click==8.1.7
+      - click-didyoumean==0.3.0
+      - click-plugins==1.1.1
+      - click-repl==0.3.0
+      - clickclick==20.10.2
+      - colorama==0.4.6
+      - colorlog==4.8.0
+      - configupdater==3.2
+      - connexion==2.14.2
+      - cron-descriptor==1.4.0
+      - croniter==2.0.1
+      - cryptography==41.0.7
+      - deprecated==1.2.14
+      - dill==0.3.1.1
+      - dnspython==2.4.2
+      - docutils==0.20.1
+      - email-validator==1.3.1
+      - exceptiongroup==1.2.0
+      - flask==2.2.5
+      - flask-appbuilder==4.3.10
+      - flask-babel==2.0.0
+      - flask-caching==2.1.0
+      - flask-jwt-extended==4.6.0
+      - flask-limiter==3.5.0
+      - flask-login==0.6.3
+      - flask-session==0.5.0
+      - flask-sqlalchemy==2.5.1
+      - flask-wtf==1.2.1
+      - flower==2.0.1
+      - frozenlist==1.4.1
+      - fsspec==2023.12.2
+      - google-re2==1.1
+      - googleapis-common-protos==1.62.0
+      - grpcio==1.60.0
+      - gunicorn==21.2.0
+      - h11==0.14.0
+      - httpcore==0.16.3
+      - httpx==0.23.3
+      - humanize==4.9.0
+      - idna==3.6
+      - importlib-metadata==6.11.0
+      - importlib-resources==6.1.1
+      - inflection==0.5.1
+      - itsdangerous==2.1.2
+      - jinja2==3.1.3
+      - jsonschema==4.20.0
+      - jsonschema-specifications==2023.12.1
+      - kombu==5.3.5
+      - lazy-object-proxy==1.10.0
+      - limits==3.7.0
+      - linkify-it-py==2.0.2
+      - lockfile==0.12.2
+      - mako==1.3.0
+      - markdown==3.5.2
+      - markdown-it-py==3.0.0
+      - markupsafe==2.1.3
+      - marshmallow==3.20.2
+      - marshmallow-oneofschema==3.0.1
+      - marshmallow-sqlalchemy==0.26.1
+      - mdit-py-plugins==0.4.0
+      - mdurl==0.1.2
+      - multidict==6.0.4
+      - mysqlclient==2.2.4
+      - opentelemetry-api==1.22.0
+      - opentelemetry-exporter-otlp==1.22.0
+      - opentelemetry-exporter-otlp-proto-common==1.22.0
+      - opentelemetry-exporter-otlp-proto-grpc==1.22.0
+      - opentelemetry-exporter-otlp-proto-http==1.22.0
+      - opentelemetry-proto==1.22.0
+      - opentelemetry-sdk==1.22.0
+      - opentelemetry-semantic-conventions==0.43b0
+      - ordered-set==4.1.0
+      - packaging==23.2
+      - pathspec==0.12.1
+      - pendulum==3.0.0
+      - pluggy==1.3.0
+      - prison==0.2.1
+      - prometheus-client==0.19.0
+      - prompt-toolkit==3.0.43
+      - protobuf==4.25.2
+      - psutil==5.9.7
+      - pycparser==2.21
+      - pydantic==2.5.3
+      - pydantic-core==2.14.6
+      - pygments==2.17.2
+      - pyjwt==2.8.0
+      - python-daemon==3.0.1
+      - python-dateutil==2.8.2
+      - python-nvd3==0.15.0
+      - python-slugify==8.0.1
+      - pytz==2023.3.post1
+      - pyyaml==6.0.1
+      - referencing==0.32.1
+      - requests==2.31.0
+      - requests-toolbelt==1.0.0
+      - rfc3339-validator==0.1.4
+      - rfc3986==1.5.0
+      - rich==13.7.0
+      - rich-argparse==1.4.0
+      - rpds-py==0.17.1
+      - setproctitle==1.3.3
+      - six==1.16.0
+      - sniffio==1.3.0
+      - sqlalchemy==1.4.51
+      - sqlalchemy-jsonfield==1.0.2
+      - sqlalchemy-utils==0.41.1
+      - sqlparse==0.4.4
+      - tabulate==0.9.0
+      - tenacity==8.2.3
+      - termcolor==2.4.0
+      - text-unidecode==1.3
+      - time-machine==2.13.0
+      - tornado==6.4
+      - typing-extensions==4.9.0
+      - tzdata==2023.4
+      - uc-micro-py==1.0.2
+      - unicodecsv==0.14.1
+      - universal-pathlib==0.1.4
+      - urllib3==1.26.18
+      - vine==5.1.0
+      - wcwidth==0.2.13
+      - werkzeug==2.2.3
+      - wrapt==1.16.0
+      - wtforms==3.1.2
+      - yarl==1.9.4
+      - zipp==3.17.0
 prefix: /Users/vraosharma/anaconda3/envs/airflow_env
-
-pip install "apache-airflow==2.2.3" --constraint "https://raw.githubusercontent.com/apache/airflow/constraints-2.2.3/constraints-no-providers-3.9.txt"
