--- a/Conda Environments/airflow_environment.yml
+++ b/Conda Environments/airflow_environment.yml
@@ -1,4 +1,4 @@
-name: airflow_env
+name: airflow
 channels:
   - anaconda
   - defaults
@@ -32,10 +32,12 @@ dependencies:
       - apache-airflow-providers-ftp==3.7.0
       - apache-airflow-providers-http==4.8.0
       - apache-airflow-providers-imap==3.5.0
+      - apache-airflow-providers-snowflake==5.3.1
       - apache-airflow-providers-sqlite==3.7.0
       - apispec==6.4.0
       - argcomplete==3.2.1
       - asgiref==3.7.2
+      - asn1crypto==1.5.1
       - async-timeout==4.0.3
       - attrs==23.2.0
       - babel==2.14.0
@@ -65,6 +67,7 @@ dependencies:
       - docutils==0.20.1
       - email-validator==1.3.1
       - exceptiongroup==1.2.0
+      - filelock==3.13.1
       - flask==2.2.5
       - flask-appbuilder==4.3.10
       - flask-babel==2.0.0
@@ -122,6 +125,7 @@ dependencies:
       - packaging==23.2
       - pathspec==0.12.1
       - pendulum==3.0.0
+      - platformdirs==3.11.0
       - pluggy==1.3.0
       - prison==0.2.1
       - prometheus-client==0.19.0
@@ -133,6 +137,7 @@ dependencies:
       - pydantic-core==2.14.6
       - pygments==2.17.2
       - pyjwt==2.8.0
+      - pyopenssl==23.3.0
       - python-daemon==3.0.1
       - python-dateutil==2.8.2
       - python-nvd3==0.15.0
@@ -150,6 +155,9 @@ dependencies:
       - setproctitle==1.3.3
       - six==1.16.0
       - sniffio==1.3.0
+      - snowflake-connector-python==3.7.0
+      - snowflake-sqlalchemy==1.5.1
+      - sortedcontainers==2.4.0
       - sqlalchemy==1.4.51
       - sqlalchemy-jsonfield==1.0.2
       - sqlalchemy-utils==0.41.1
@@ -159,6 +167,7 @@ dependencies:
       - termcolor==2.4.0
       - text-unidecode==1.3
       - time-machine==2.13.0
+      - tomlkit==0.12.3
       - tornado==6.4
       - typing-extensions==4.9.0
       - tzdata==2023.4
@@ -173,4 +182,4 @@ dependencies:
       - wtforms==3.1.2
       - yarl==1.9.4
       - zipp==3.17.0
-prefix: /Users/vraosharma/anaconda3/envs/airflow_env
+prefix: /Users/vraosharma/anaconda3/envs/airflow
