--- a/Conda Environment/main_environment.yml
+++ b/Conda Environment/main_environment.yml
@@ -32,7 +32,7 @@ dependencies:
   - brotli-python=1.0.9=py38he9d5cce_7
   - bzip2=1.0.8=h1de35cc_0
   - c-ares=1.19.1=h6c40b1e_0
-  - ca-certificates=2023.12.12=hecd8cb5_0
+  - ca-certificates=2024.3.11=hecd8cb5_0
   - cachetools=4.2.2=pyhd3eb1b0_0
   - certifi=2024.2.2=py38hecd8cb5_0
   - cffi=1.16.0=py38h6c40b1e_0
@@ -127,20 +127,18 @@ dependencies:
   - openssl=3.0.13=hca72f7f_0
   - orc=1.7.4=h995b336_1
   - overrides=7.4.0=py38hecd8cb5_0
-  - packaging=23.1=py38hecd8cb5_0
+  - packaging=23.2=py38hecd8cb5_0
   - pandas=2.0.3=py38h3ea8b11_0
   - pandocfilters=1.5.0=pyhd3eb1b0_0
   - parso=0.8.3=pyhd8ed1ab_0
   - pexpect=4.9.0=pyhd8ed1ab_0
   - pickleshare=0.7.5=py_1003
   - pillow=10.2.0=py38h6c40b1e_0
-  - pip=23.3.1=py38hecd8cb5_0
   - pkgutil-resolve-name=1.3.10=py38hecd8cb5_1
   - platformdirs=3.10.0=py38hecd8cb5_0
   - prometheus_client=0.14.1=py38hecd8cb5_0
   - prompt-toolkit=3.0.42=pyha770c72_0
   - prompt_toolkit=3.0.42=hd8ed1ab_0
-  - protobuf=3.20.3=py38hcec6c5f_0
   - psutil=5.9.8=py38hae2e43d_0
   - ptyprocess=0.7.0=pyhd3deb0d_0
   - pure_eval=0.2.2=pyhd8ed1ab_0
@@ -193,7 +191,6 @@ dependencies:
   - typing-extensions=4.9.0=py38hecd8cb5_1
   - typing_extensions=4.9.0=py38hecd8cb5_1
   - tzlocal=2.1=py38hecd8cb5_1
-  - urllib3=1.26.18=py38hecd8cb5_0
   - utf8proc=2.6.1=h9ed2024_0
   - validators=0.18.2=pyhd3eb1b0_0
   - wcwidth=0.2.13=pyhd8ed1ab_0
@@ -208,14 +205,93 @@ dependencies:
   - zlib=1.2.13=h4dc903c_0
   - zstd=1.5.5=hc035e20_0
   - pip:
+      - aiohttp==3.9.3
+      - aiosignal==1.3.1
+      - annotated-types==0.6.0
+      - anthropic==0.25.1
+      - async-timeout==4.0.3
       - contourpy==1.1.1
       - cycler==0.12.1
+      - dataclasses-json==0.6.4
+      - distro==1.9.0
+      - docstring-parser==0.16
       - fonttools==4.48.1
+      - frozenlist==1.4.1
+      - fsspec==2024.3.1
+      - google-api-core==2.18.0
+      - google-auth==2.29.0
+      - google-cloud-aiplatform==1.47.0
+      - google-cloud-bigquery==3.20.1
+      - google-cloud-core==2.4.1
+      - google-cloud-resource-manager==1.12.3
+      - google-cloud-storage==2.16.0
+      - google-crc32c==1.5.0
+      - google-resumable-media==2.7.0
+      - googleapis-common-protos==1.63.0
+      - greenlet==3.0.3
+      - groq==0.5.0
+      - grpc-google-iam-v1==0.13.0
+      - grpcio==1.62.1
+      - grpcio-status==1.62.1
+      - h11==0.14.0
+      - httpcore==1.0.4
+      - httpx==0.27.0
+      - huggingface-hub==0.22.2
+      - joblib==1.4.0
+      - jsonpatch==1.33
+      - jsonpointer==2.4
       - kiwisolver==1.4.5
+      - langchain==0.1.16
+      - langchain-anthropic==0.1.8
+      - langchain-community==0.0.33
+      - langchain-core==0.1.43
+      - langchain-experimental==0.0.56
+      - langchain-google-vertexai==1.0.1
+      - langchain-groq==0.1.2
+      - langchain-openai==0.1.1
+      - langchain-pinecone==0.1.0
+      - langchain-text-splitters==0.0.1
+      - langsmith==0.1.40
       - load-dotenv==0.1.0
+      - marshmallow==3.21.1
       - matplotlib==3.7.4
+      - mpmath==1.3.0
+      - multidict==6.0.5
+      - mypy-extensions==1.0.0
+      - networkx==3.1
+      - openai==1.20.0
+      - orjson==3.10.0
+      - pinecone-client==3.2.2
+      - pip==24.0
+      - plotly==5.21.0
+      - proto-plus==1.23.0
+      - protobuf==4.25.3
+      - pyasn1==0.6.0
+      - pyasn1-modules==0.4.0
+      - pydantic==2.6.3
+      - pydantic-core==2.16.3
       - pyparsing==3.1.1
       - python-dotenv==1.0.1
+      - regex==2023.12.25
+      - rsa==4.9
+      - safetensors==0.4.2
+      - scikit-learn==1.3.2
       - scipy==1.10.1
+      - sentence-transformers==2.6.1
+      - shapely==2.0.3
+      - sqlalchemy==2.0.29
       - streamlit==1.31.1
-prefix: /Users/vraosharma/anaconda3/envs/main_env
+      - streamlit-chat==0.1.1
+      - streamlit-dynamic-filters==0.1.6
+      - sympy==1.12
+      - threadpoolctl==3.4.0
+      - tiktoken==0.6.0
+      - tokenizers==0.15.2
+      - torch==2.2.2
+      - tqdm==4.66.2
+      - transformers==4.39.3
+      - types-protobuf==4.25.0.20240410
+      - types-requests==2.31.0.20240406
+      - typing-inspect==0.9.0
+      - urllib3==2.2.1
+      - yarl==1.9.4
